# try-what-if

./: README.md  pyproject.toml  what_if_1_model_datatable.ipynb  what_if_2_goalseek.ipynb  what_if_3_simulation.ipynb
